🔧fix post doc in post.go 🌟add REPLY CRUD ❓decide users's limits of authority to reply.go
