# controllers/const.go
@@ -473,9 +473,43 @@ func (f PostCreateForm) ConvertToModel() (post models.Post) {
 }
 
 type PostUpdateForm struct {
+	// json:"PostID" is not given by request's json, it's given by URL
 	PostID  *string `json:"postID" validate:"omitempty,uuid4"`
 	Title   *string `json:"title" validate:"omitempty"`
 	Content *string `json:"content" validate:"omitempty"`
+}
+
+// >>> REPLY <<<
+// ============
+type ReplyCreateForm struct {
+	//ReplyID string `json:"replyID" validate:"required"`
+	PostID  string `json:"postID" validate:"required,uuid4"`
+	Content string `json:"content" validate:"required"`
+}
+
+func (f ReplyCreateForm) ConvertToModel() (reply models.Reply) {
+	postID, _ := uuid.FromString(f.PostID)
+	reply = models.Reply{
+		PostID:  postID,
+		Content: f.Content,
+	}
+	return
+}
+
+type ReplyUpdateForm struct {
+	// json:"replyID" is not given by request's json, it's given by URL
+	ReplyID *string `json:"replyID" validate:"omitempty,uuid4"`
+	Content *string `json:"content" validate:"omitempty"`
+}
+
+type GetReplyListResponse struct {
+	GetListResponse
+	Data []models.Reply `json:"data"`
+}
+
+type GetReplyResponse struct {
+	Message string       `json:"message" example:"success"`
+	Data    models.Reply `json:"data"`
 }
 
 // GetPostListResponse for GetPostList
